force-app/main/default/objects/ConfigInputsTranslation__c/ConfigInputsTranslation__c.object-meta.xml
<CustomObject>
    <label>ConfigInputsTranslation</label>
    <nameField>
        <label>ConfigInputsTranslation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ConfigInputsTranslation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>