force-app/main/default/objects/ConfigInputsTranslation__c/fields/Configurator__c.field-meta.xml
<CustomField>
    <fullName>Configurator__c</fullName>
    <label>Configurator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>