force-app/main/default/objects/ConfigInputsTranslation__c/fields/Field100__c.field-meta.xml
<CustomField>
    <fullName>Field100__c</fullName>
    <label>Field100</label>
    <length>255</length>
    <type>Text</type>
</CustomField>