force-app/main/default/objects/ConfigInputsTranslation__c/fields/Field101__c.field-meta.xml
<CustomField>
    <fullName>Field101__c</fullName>
    <label>Field101</label>
    <length>255</length>
    <type>Text</type>
</CustomField>