force-app/main/default/objects/ConfigInputsTranslation__c/fields/Field102__c.field-meta.xml
<CustomField>
    <fullName>Field102__c</fullName>
    <label>Field102</label>
    <length>255</length>
    <type>Text</type>
</CustomField>