force-app/main/default/objects/ConfigInputsTranslation__c/fields/FieldOpp11__c.field-meta.xml
<CustomField>
    <fullName>FieldOpp11__c</fullName>
    <label>FieldOpp11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>