force-app/main/default/objects/ConfigInputsTranslation__c/fields/FieldOpp12__c.field-meta.xml
<CustomField>
    <fullName>FieldOpp12__c</fullName>
    <label>FieldOpp12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>