force-app/main/default/objects/ConfigInputsTranslation__c/fields/FieldOpp15__c.field-meta.xml
<CustomField>
    <fullName>FieldOpp15__c</fullName>
    <label>FieldOpp15</label>
    <length>255</length>
    <type>Text</type>
</CustomField>