force-app/main/default/objects/ConfigInputsTranslation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Configurator__c</columns>
    <columns>Field1__c</columns>
    <columns>Field2__c</columns>
    <columns>Field3__c</columns>
    <columns>Field4__c</columns>
    <columns>Field5__c</columns>
    <columns>Field6__c</columns>
    <columns>Field7__c</columns>
    <columns>Field8__c</columns>
    <columns>Field9__c</columns>
    <columns>Field101__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>